--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=3f49ba7a3ab8a835b5bba9f0932adaba5996dbffde7c098b20d52a3eaa833757
 language: ruby
 rvm:
-# Build on the latest stable of all supported Rubies (https://www.ruby-lang.org/en/downloads/):
-- 2.3.8
-- 2.4.5
-- 2.5.3
-- 2.6.0
+  # Build on the latest stable of all supported Rubies (https://www.ruby-lang.org/en/downloads/):
+  - 2.3.8
+  - 2.4.5
+  - 2.5.3
+  - 2.6.0
 cache: bundler
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
-- bundle exec rubocop
-- bundle exec rspec
+  - bundle exec rubocop
+  - bundle exec rspec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
