--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,6 @@ script:
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 addons:
-  artifacts: true
+  artifacts:
+    paths:
+      - Gemfile.lock
